# github-action-exericise

./: .gitignore  LICENSE  README.md
.github/: CODEOWNERS
.github/workflows/: ci.yml  old.yml
hello/: Cargo.toml
hello/src/: main.rs
