[package]
name = "todo-app-axum-claude"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.20"
tokio = { version = "1.32.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.4.1", features = ["v4", "serde"] }
reqwest = { version = "0.11", features = ["json"] }
dotenv = "0.15.0"
